--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -40,7 +40,7 @@ When contributing a new icon, follow these guidelines:
 
 - 90° corners should have a 2px radius
 - Greater than 90° corners should have a 1px radius
-- 1–90° corners should have an 0.5px radius
+- Less than 90° corners should have an 0.5px radius
 - Interior corners should not have a radius
 
 ### Line Terminals
