--- a/packages/components/src/Icon/Icon.mdx
+++ b/packages/components/src/Icon/Icon.mdx
@@ -25,6 +25,29 @@ Use icons as intended. Provided icons have a specific, meaning. To avoid
 confusing users, it’s essential that each image be used in accordance with its
 meaning and recommended usage.
 
+## Design Guidelines
+
+When contributing a new icon, follow these guidelines:
+
+### Size and Weight
+
+- Icons should have a height and width of 20px container within a 24px artboard,
+  effectively providing a 2px padding on all sides
+- Circular icons should have a 20px diameter
+- Lines should have a 2px weight
+
+### Corners
+
+- 90° corners should have a 2px radius
+- Greater than 90° corners should have a 1px radius
+- Less than 90° corners should have an 0.5px radius
+- Interior corners should not have a radius
+
+### Line Terminals
+
+- When a line is interrupted, terminals should be geometric/square
+- when a line ends organically, terminals should be round
+
 ```ts
 import { Icon } from "@jobber/components/Icon";
 ```
