minor tweaks to wording of docs and errors

--- a/packages/components/src/InputGroup/InputGroup.mdx
+++ b/packages/components/src/InputGroup/InputGroup.mdx
@@ -39,7 +39,7 @@ The default layout is for fields to flow in a vertical direction, one above the
 next. Use the `flowDirection` prop to specify when you want fields to flow in a
 horizontal direction.
 
-> **Note** - Nested `InputGroup` components need to be of
+> **Note:** Nested `InputGroup` components need to be of
 > `flowDirection="horizontal"` to avoid layout issues caused by nesting. Any
 > non-horizontal nested groups will log an error to the console and not be
 > rendered.
