Update the content of the MDX

--- a/packages/components/src/Example/Example.mdx
+++ b/packages/components/src/Example/Example.mdx
@@ -26,17 +26,19 @@ import { Example } from "@jobber/components/Example";
 
 <Props of={Example} />
 
----
+<!--
+  It is not necessary to include Design & Usage Guidlelines. Use this section
+  to answer common questions and considerations about component usage.
+-->
 
-## Design Guidelines
+## Design & Usage Guidelines
 
-When contributing to the Example component, follow these guidelines:
+When contributing to, or consuming the Example component, consider the
+following:
 
-## Best Practices
-
-The Example component should:
-
----
+- When using the Example component always consider the volume you would like it
+  to be displayed at.
+- The Example component should never be used inside another component.
 
 <!--
   It is not necessary to provide an example of each prop. Use usage examples to
