Handles the size prop

--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -19,7 +19,7 @@ import { Avatar } from "@jobber/components/Avatar";
 ```
 
 <Playground>
-  <Avatar text="Bob" />
+  <Avatar size="large" />
 </Playground>
 
 <!--
