--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -19,7 +19,8 @@ import { Avatar } from "@jobber/components/Avatar";
 ```
 
 <Playground>
-  <Avatar size="large" />
+  <Avatar initials="SO" />
+  <Avatar size="large" initials="JB" />
 </Playground>
 
 <!--
