handles background image and border

--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -19,8 +19,12 @@ import { Avatar } from "@jobber/components/Avatar";
 ```
 
 <Playground>
-  <Avatar initials="SO" />
-  <Avatar size="large" initials="JB" />
+  <Avatar
+    size="large"
+    initials="JB"
+    imageUrl="https://picsum.photos/seed/picsum/150/150"
+    color="var(--color-red)"
+  />
 </Playground>
 
 <!--
