Cleans up initials code

--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -19,12 +19,8 @@ import { Avatar } from "@jobber/components/Avatar";
 ```
 
 <Playground>
-  <Avatar
-    size="large"
-    initials="JB"
-    imageUrl="https://picsum.photos/seed/picsum/150/150"
-    color="var(--color-red)"
-  />
+  imageUrl="https://picsum.photos/seed/picsum/150/150"
+  <Avatar size="large" initials="JBfsd" color="var(--color-red)" />
 </Playground>
 
 <!--
