Tests and handle color contrast

--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -25,7 +25,7 @@ import { Avatar } from "@jobber/components/Avatar";
     name="The Jobbler"
     size="large"
     initials="JBLR"
-    color="var(--color-indigo)"
+    color="var(--color-white)"
   />
 </Playground>
 
@@ -51,7 +51,7 @@ component.
     };
     return (
       <>
-        <label for="color-picker">Select A Color</label>
+        <label htmlFor="color-picker">Select A Color</label>
         <br />
         <input
           type="color"
