Adds Primary action

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -20,7 +20,15 @@ import { Banner } from "@jobber/components/Banner";
 ```
 
 <Playground>
-  <Banner type="success">You've successfully Hulked out</Banner>
+  <Banner
+    type="success"
+    primaryAction={{
+      label: "Poke Me",
+      onClick: () => alert("💥 SMASH 💥")
+    }}
+  >
+    You've successfully Hulked out
+  </Banner>
 </Playground>
 
 ## Props
