--- a/packages/components/src/RadioGroup/RadioGroup.mdx
+++ b/packages/components/src/RadioGroup/RadioGroup.mdx
@@ -12,9 +12,9 @@ import { useState } from "react";
 
 # Radio Group
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Write a description about what RadioGroup component is trying to achieve.
+RadioGroup will allow users to choose from one of a list of provided options.
 
 ```ts
 import { RadioGroup } from "@jobber/components/RadioGroup";
@@ -26,7 +26,6 @@ import { RadioGroup } from "@jobber/components/RadioGroup";
     return (
       <RadioGroup
         name="dedicatedPhoneNumber"
-        header="some text about the options"
         onChange={setCompany}
         value={company}
       >
@@ -38,35 +37,6 @@ import { RadioGroup } from "@jobber/components/RadioGroup";
   }}
 </Playground>
 
-<!--
-  It is not necessary to include Design & Usage Guidlelines. Use this section
-  to answer common questions and considerations about component usage.
--->
-
-## Design & Usage Guidelines
-
-When contributing to, or consuming the RadioGroup component, consider the
-following:
-
-- When using the RadioGroup component always consider the volume you would like
-  it to be displayed at.
-- The RadioGroup component should never be used inside another component.
-
 ## Props
 
 <Props of={RadioGroup} />
-
-<!--
-  It is not necessary to provide an example of each prop. Use usage examples to
-  highlight key features of a component or particular considerations.
-
-  See `Button.mdx` for a good example of this.
--->
-
-## Loud
-
-Use `loud` to indicate that a component is yelling.
-
-<Playground>
-  <RadioGroup text="Fred" loud={true} />
-</Playground>
