tweak hooks in docs menus

--- a/packages/hooks/README.mdx
+++ b/packages/hooks/README.mdx
@@ -6,6 +6,12 @@ route: /hooks
 
 # Atlantis Hooks
 
+Shared hooks for components in Atlantis.
+
+## Hooks
+
+- [useResizeObserver](hooks/use-resize-observer)
+
 ## Installing
 
 `npm install hooks @jobber/hooks`
