--- a/packages/hooks/USE_RESIZE_OBSERVER.mdx
+++ b/packages/hooks/USE_RESIZE_OBSERVER.mdx
@@ -8,10 +8,21 @@ route: /hooks/use-resize-observer
 
 ## Example
 
-```
+```jsx
 import { useResizeObserver } from "@jobber/hooks";
 
 function MyResizeObservedComponent() {
-  const [ref, {width, height}] = useResizeObserver();
+  const [ref, { width, height }] = useResizeObserver();
+  let message = "This is smol.";
+  if (width > 300) message = "This is wide.";
+  if (width > 600) message = "This is super wide.";
+
+  return (
+    <div ref={ref}>
+      height: {height} <br />
+      width: {width} <br />
+      {message}
+    </div>
+  );
 }
 ```
