--- a/packages/hooks/USE_RESIZE_OBSERVER.mdx
+++ b/packages/hooks/USE_RESIZE_OBSERVER.mdx
@@ -8,7 +8,7 @@ route: /hooks/use-resize-observer
 
 ## Example
 
-```jsx
+```tsx
 import { useResizeObserver } from "@jobber/hooks";
 
 function MyResizeObservedComponent() {
