feat(components): Add primaryAction and placement to Banner (#244)
* Adds Primary action

* adds placement prop

* Adds a description to the placement prop

* Removes the placement prop

* Add a description to confusing variable

* better documentation on primaryActions

* Typos and comments

--- a/packages/components/src/Banner/Banner.mdx
+++ b/packages/components/src/Banner/Banner.mdx
@@ -54,3 +54,30 @@ import { Banner } from "@jobber/components/Banner";
 <Playground>
   <Banner type="error">Hulk smash has been unsuccessful</Banner>
 </Playground>
+
+## Actions in Banners
+
+It is discouraged to use a `<Button />` component when requiring an action
+within a `Banner`. If you require an action, use the `primaryActions` prop. The
+`primaryAction` accepts the same props as the `Button` component.
+
+<Playground>
+  <Banner
+    type="success"
+    primaryAction={{
+      label: "Poke Me",
+      onClick: () => alert("💥💥SMASH💥💥")
+    }}
+  >
+    You wouldn't like me when I'm angry.
+  </Banner>
+  <Banner
+    type="notice"
+    primaryAction={{
+      label: "I'm always angry",
+      onClick: () => alert("😡😡😡")
+    }}
+  >
+    That's my secret Captain
+  </Banner>
+</Playground>
