--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -36,7 +36,7 @@ import {
           onConfirm={() => {
             alert("okay then");
           }}
-          onRequestClose={() => setOpen(false)}
+          onCancel={() => setOpen(false)}
         />
       </>
     );
