--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -40,6 +40,12 @@ import { Card } from "@jobber/components/Card";
   </Card>
 </Playground>
 
+## Design & Usage Guidelines
+
+The primary utility of a card is its' grouping of elements by proximity within a clear boundary, clearly marked by a header.
+
+A card should be the smallest-possible self-contained section of content. If you find yourself putting a card inside of another card, the outer card should be removed, and it may be worth re-assessing the hierarchy of your interface.
+
 ## Props
 
 <Props of={Card} />
