typo fix on calendar

--- a/packages/components/src/Avatar/Avatar.mdx
+++ b/packages/components/src/Avatar/Avatar.mdx
@@ -53,7 +53,7 @@ component.
 When using `color`, make sure that the color is consistent for a user throughout
 the application. The color that is represented for an avatar should be the same
 color that represents a user in other parts of the application, such as the
-calender.
+calendar.
 
 <Playground>
   {() => {
