--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -18,7 +18,7 @@ import { Card } from "../Card";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-Contents are used to give elements consistent vertical spacing and padding.
+Content is a container component which provides its' child elements with consistent vertical spacing and padding.
 
 ```ts
 import { Content } from "@jobber/components/Content";
@@ -49,6 +49,10 @@ import { Content } from "@jobber/components/Content";
     </Card>
   </Content>
 </Playground>
+
+## Design Usage & Guidelines
+
+Content should be used whenever you have a container with mixed content that requires consistent spacing between the elements within said container.
 
 ## Props
 
