address agnes review

--- a/packages/components/src/Content/Content.mdx
+++ b/packages/components/src/Content/Content.mdx
@@ -52,7 +52,7 @@ import { Content } from "@jobber/components/Content";
 
 ## Design Usage & Guidelines
 
-Content should be used whenever you have a container with mixed content that requires consistent spacing between the elements within said container.
+Content should be used whenever you have a container with mixed content that requires consistent spacing between the elements.
 
 ## Props
 
