address agnes review

--- a/packages/components/src/Switch/Switch.mdx
+++ b/packages/components/src/Switch/Switch.mdx
@@ -61,7 +61,7 @@ A controlled switch can turn something on or off, and can be controlled by anoth
 
 ## Disabled
 
-A disabled switch cannot be operated by the user. If presenting a disabled "On" switch to the user, the context and ability for the user to enable the switch must be apparent to avoid creating a sense that the user has lost control of the interface.
+A disabled switch cannot be operated by the user. If presenting a disabled "On" switch to the user, provide a clear description for the user on how to enable the switch to avoid creating a sense that the user has lost control of the interface.
 
 <Playground>
   <Switch value={false} ariaLabel="Visible to clients" disabled={true} />
