address agnes review

--- a/packages/components/src/Card/Card.mdx
+++ b/packages/components/src/Card/Card.mdx
@@ -14,8 +14,8 @@ import { Content } from "../Content";
 
 <ComponentStatus stage="ready" responsive="yes" accessible="yes" />
 
-A card is used to group related information and tasks to make things easier to
-scan, and action upon
+A card is used to group related information and tasks so our users can scan 
+and prioritize information more easily.
 
 ```ts
 import { Card } from "@jobber/components/Card";
@@ -42,7 +42,7 @@ import { Card } from "@jobber/components/Card";
 
 ## Design & Usage Guidelines
 
-The primary utility of a card is its' grouping of elements by proximity within a clear boundary, clearly marked by a header.
+A card is useful for grouping content because of it's distinct visual boundaries. However, similar to the idea that "making everything stand out means that nothing stands out", you should be mindful in your application of cards.
 
 A card should be the smallest-possible self-contained section of content. If you find yourself putting a card inside of another card, the outer card should be removed, and it may be worth re-assessing the hierarchy of your interface.
 
