Remove comments in mdx

--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -32,6 +32,7 @@ import {
         <ConfirmationModal
           title="Should we?"
           text="Do something…"
+          confirmLabel="Do it"
           open={open}
           onConfirm={() => {
             alert("okay then");
@@ -42,11 +43,6 @@ import {
     );
   }}
 </Playground>
-
-<!--
-  It is not necessary to include Design & Usage Guidlelines. Use this section
-  to answer common questions and considerations about component usage.
--->
 
 ## Design & Usage Guidelines
 
@@ -60,13 +56,6 @@ following:
 ## Props
 
 <Props of={ConfirmationModal} />
-
-<!--
-  It is not necessary to provide an example of each prop. Use usage examples to
-  highlight key features of a component or particular considerations.
-
-  See `Button.mdx` for a good example of this.
--->
 
 ## Reuse
 
