--- a/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
+++ b/packages/components/src/ConfirmationModal/ConfirmationModal.mdx
@@ -12,7 +12,7 @@ import { ConfirmationModal } from ".";
 
 # Confirmation Modal
 
-<ComponentStatus stage="pre" responsive="no" accessible="no" />
+<ComponentStatus stage="pre" responsive="yes" accessible="yes" />
 
 A ConfirmationModal allows users to confirm or cancel actions that they are
 performing. Examples of actions that may need confirmation are navigating off an
